--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "eslint": "^7.13.0",
+    "prettier": "2.1.2"
   }
 }
